# hserv

./: CMakeLists.txt  LICENSE  README.md  setup_ssl.sh
include/: harray.h  hbuffer.h  hfs.h  hhash_map.h  hlist.h  hserv.h  htest.h  hws.h
src/: main.c  server.c  server.h  utility.c  utility.h  websocket.c  websocket.h
unittests/: CMakeLists.txt
unittests/src/: main.c  test_harray.c  test_hbuffer.c  test_hfs.c  test_hhash_map.c  test_hlist.c  test_hserv.c  test_hws.c
